--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="profile">
         <small>Hari ini <script language='JavaScript'>document.write(tanggallengkap);</script></small>
         <h4>Halo, selamat datang!</h4>
-        <div class="pfp"><img src="pfp.png" alt="Foto Profil"></div>
+        <div class="pfp"><img src="https://github.com/Dzaky05/kucinghitam/blob/main/media/FB_IMG_1694165234267.jpg" alt="Foto Profil"></div>
         <h1>Dzaky Adinata</h1>
         <p>Hanya insan manusia yang memiliki hobi menghabiskan waktunya di internet.</p>
     </div>        
