--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ function get_client_browser() {
    <img src="https://raw.githubusercontent.com/Dzaky05/kucinghitam/main/media/ZM-4dL4R_400x400.jpg" alt="prosek Logo">
             <a>Project Sekai (UID: 376896936298635269) </a>
             <br>
-   <img src="https://static.wikia.nocookie.net/strikeofkings_gamepedia_en/images/a/a3/AOV_plain_logo.png/revision/latest/scale-to-width-down/75?cb=20201222121130" alt="alien Logo">
+   <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/Arena_of_Valor_logo.png" alt="alien Logo">
             <a>Arena of Valor (UID: )</a>            
 </div> 
 <!-- projek -->
@@ -208,6 +208,8 @@ function get_client_browser() {
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Lisensi Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />Kandungan web ini disebarluaskan dengan <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Lisensi Creative Commons Atribusi-NonKomersial 4.0 Internasional</a> (kecuali dinyatak
 <br>
 Terakhir diupdate: September 2023
+ <br>
+ <input type="button" value="Refresh" onClick="document.location.reload(true)">
 <h4>Informasi perangkat:</h4>
 </php
    echo "IP anda adalah : ". get_client_ip()."<br>";
