--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ function get_client_browser() {
             <img src="https://raw.githubusercontent.com/Dzaky05/kucinghitam/main/media/FB_IMG_1694165234267.jpg" alt="Foto Profil">
         </div>
         <h1>Dzaky Adinata</h1>
-        <p>Hanya insan manusia yang memiliki hobi menghabiskan waktunya di internet.</p>
+        <p>Hanya seorang insan yang memiliki hobi menghabiskan waktunya di internet.</p>
         <p style="color: gray;">
         <i>"Masa depan bagaikan embusan angin~"</i>
     </p>
