--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ function get_client_browser() {
             <a>BanG Dream! (UID: 11564446 [GL])(UID: 131003551 [JP])</a>
             <br>
    <img src="https://raw.githubusercontent.com/Dzaky05/kucinghitam/main/media/ZM-4dL4R_400x400.jpg" alt="prosek Logo">
-            <a>Project Sekai (UID: 376896936298635269) </a>
+            <a>Project Sekai (UID: 376896936298635269 [GL]) </a>
             <br>
    <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/Arena_of_Valor_logo.png" alt="alien Logo">
             <a>Arena of Valor (UID: )</a>            
