--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ function get_client_browser() {
 <footer></footer>
 <i>aku loplep ♡</i>
     <br><br>
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Lisensi Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />Kandungan web ini disebarluaskan dengan <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Lisensi Creative Commons Atribusi-NonKomersial 4.0 Internasional</a> (kecuali dinyatak
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Lisensi Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />Kandungan web ini disebarluaskan dengan <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Lisensi Creative Commons Atribusi-NonKomersial 4.0 Internasional</a> (kecuali dinyatakan lain).
 <br>
 Terakhir diupdate: September 2023
  <br>
