--- a/nilaiacak.html
+++ b/nilaiacak.html
@@ -31,7 +31,7 @@
 <body>
     <p>Hari ini <script language='JavaScript'>document.write(tanggallengkap);</script><div id="DisplayClock" class="clock" onload="showTime()"></div>
     </p>
-    <p>/ <a href="https://dzaky05.github.io/kucinghitam">kucinghitam</a> / nilaiacak</p>
+    <p>/ <a href="https://dzaky05.github.io/kucinghitam">kucinghitam</a> / nilaiacak.html</p>
     <hr>
     <br>
   <h1>Generator Nilai Acak</h1>
