--- a/index.html
+++ b/index.html
@@ -166,17 +166,21 @@ function get_client_browser() {
         </li>
     </ul>
 <!-- Ingfo mabar -->
-<div class="social-media-list">
   <h2>Info Mabar</h2>  
+     <ul class="social-media-list">
+      <li>
    <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/BanG_Dream%21_lightning_exclamation_mark_symbol.svg" alt="BD Logo">
-            <a>BanG Dream! (UID: 11564446 [GL])(UID: 131003551 [JP])</a>
-            <br>
+            <a>BanG Dream! (UID: 11564446 [GL])<(UID: 131003551 [JP])</a>
+      </li>
+      <li>
    <img src="https://raw.githubusercontent.com/Dzaky05/kucinghitam/main/media/ZM-4dL4R_400x400.jpg" alt="prosek Logo">
-            <a>Project Sekai (UID: 376896936298635269 [GL]) </a>
-            <br>
-   <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/Arena_of_Valor_logo.png" alt="alien Logo">
-            <a>Arena of Valor (UID: )</a>            
-</div> 
+            <a>Project Sekai (UID: 376896936298635269) </a>
+      </li>
+      <li>
+   <img src="https://static.wikia.nocookie.net/strikeofkings_gamepedia_en/images/a/a3/AOV_plain_logo.png/revision/latest/scale-to-width-down/75?cb=20201222121130" alt="alien Logo">
+            <a>Arena of Valor (UID: )</a> 
+      </li>
+   </ul> 
 <!-- projek -->
 <h2>Projek</h2>
 <big>•</big> <a href="https://bandori.fandom.com/id">BanG Dream! Wiki versi bahasa Indonesia</a><br>
@@ -192,6 +196,13 @@ function get_client_browser() {
  <p style="color: gray;">
         <i>Belum tersedia :(</i>
     </p>
+<!-- tool -->
+ <h2>Tools</h2>
+ <ul>
+  <li><a href="https://dzaky05.github.io/kucinghitam/nilaiacak.html">Generator Nilai Acak</a>
+  </li>
+  <li><a href="https://dzaky05.github.io/kucinghitam/cekhoki.html">Cek Hoki</a></li>
+ </ul>
 <!-- galeri -->
 <h2>Galeri</h2>
  <p style="color: gray;">
