--- a/index.html
+++ b/index.html
@@ -14,67 +14,6 @@
     var tahun = tgl.getFullYear();
     tanggallengkap = namahari[hari] + ", " +tanggal + " " + namabulan[bulan] + " " + tahun;
     </script>
-    <?php
-// Mendapatkan IP pengunjung menggunakan getenv()
-function get_client_ip() {
-    $ipaddress = '';
-    if (getenv('HTTP_CLIENT_IP'))
-        $ipaddress = getenv('HTTP_CLIENT_IP');
-    else if(getenv('HTTP_X_FORWARDED_FOR'))
-        $ipaddress = getenv('HTTP_X_FORWARDED_FOR');
-    else if(getenv('HTTP_X_FORWARDED'))
-        $ipaddress = getenv('HTTP_X_FORWARDED');
-    else if(getenv('HTTP_FORWARDED_FOR'))
-        $ipaddress = getenv('HTTP_FORWARDED_FOR');
-    else if(getenv('HTTP_FORWARDED'))
-       $ipaddress = getenv('HTTP_FORWARDED');
-    else if(getenv('REMOTE_ADDR'))
-        $ipaddress = getenv('REMOTE_ADDR');
-    else
-        $ipaddress = 'IP tidak dikenali';
-    return $ipaddress;
-}
-  
-  
-// Mendapatkan IP pengunjung menggunakan $_SERVER
-function get_client_ip_2() {
-    $ipaddress = '';
-    if (isset($_SERVER['HTTP_CLIENT_IP']))
-        $ipaddress = $_SERVER['HTTP_CLIENT_IP'];
-    else if(isset($_SERVER['HTTP_X_FORWARDED_FOR']))
-        $ipaddress = $_SERVER['HTTP_X_FORWARDED_FOR'];
-    else if(isset($_SERVER['HTTP_X_FORWARDED']))
-        $ipaddress = $_SERVER['HTTP_X_FORWARDED'];
-    else if(isset($_SERVER['HTTP_FORWARDED_FOR']))
-        $ipaddress = $_SERVER['HTTP_FORWARDED_FOR'];
-    else if(isset($_SERVER['HTTP_FORWARDED']))
-        $ipaddress = $_SERVER['HTTP_FORWARDED'];
-    else if(isset($_SERVER['REMOTE_ADDR']))
-        $ipaddress = $_SERVER['REMOTE_ADDR'];
-    else
-        $ipaddress = 'IP tidak dikenali';
-    return $ipaddress;
-}
-  
-  
-// Mendapatkan jenis web browser pengunjung
-function get_client_browser() {
-    $browser = '';
-    if(strpos($_SERVER['HTTP_USER_AGENT'], 'Netscape'))
-        $browser = 'Netscape';
-    else if (strpos($_SERVER['HTTP_USER_AGENT'], 'Firefox'))
-        $browser = 'Firefox';
-    else if (strpos($_SERVER['HTTP_USER_AGENT'], 'Chrome'))
-        $browser = 'Chrome';
-    else if (strpos($_SERVER['HTTP_USER_AGENT'], 'Opera'))
-        $browser = 'Opera';
-    else if (strpos($_SERVER['HTTP_USER_AGENT'], 'MSIE'))
-        $browser = 'Internet Explorer';
-    else
-        $browser = 'Other';
-    return $browser;
-}
-?>
     <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/id_ID/sdk.js#xfbml=1&version=v17.0" nonce="K7oG8ln8"></script>
 <html>
@@ -150,7 +89,7 @@ function get_client_browser() {
         </li>
         <li>
             <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="Instagram Logo">
-            <a href="https://instagram.com/dzakyadinata15">Instagram</a> [<a href="https://instagram.com/hikawa_adinata">akun 2</a>]
+            <a href="https://instagram.com/dzaky_adinata">Instagram</a> [<a href="https://instagram.com/hikawa_adinata">akun 2</a>]
         </li>
         <li>
             <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/636e0a6a49cf127bf92de1e2_icon_clyde_blurple_RGB.png" alt="Discord Logo">
@@ -176,10 +115,12 @@ function get_client_browser() {
    <img src="https://raw.githubusercontent.com/Dzaky05/kucinghitam/main/media/ZM-4dL4R_400x400.jpg" alt="prosek Logo">
             <a>Project Sekai (UID: 376896936298635269) </a>
       </li>
+      <!--
       <li>
    <img src="https://static.wikia.nocookie.net/strikeofkings_gamepedia_en/images/a/a3/AOV_plain_logo.png/revision/latest/scale-to-width-down/75?cb=20201222121130" alt="alien Logo">
             <a>Arena of Valor (UID: )</a> 
       </li>
+      -->
    </ul> 
 <!-- projek -->
 <h2>Projek</h2>
@@ -221,12 +162,6 @@ function get_client_browser() {
 Terakhir diupdate: September 2023
  <br>
  <input type="button" value="Refresh" onClick="document.location.reload(true)">
-<h4>Informasi perangkat:</h4>
-</php
-   echo "IP anda adalah : ". get_client_ip()."<br>";
-   echo "Browser : ".get_client_browser()."<br>";
-   echo "Sistem Operasi : ".$_SERVER['HTTP_USER_AGENT'];
-?>
 </footer>
 <!-- akhir -->                 
 </html>
