--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!-- header mulai -->
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Profil</title>    
+    <title>Profil</title>
     <style>
         body {
             font-family: monospace;
@@ -84,7 +84,10 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-        }   
+        } 
+        #waktu {
+            font-size: 24px;
+        }
     </style>
 </head>
 <!-- header selesai -->
@@ -182,7 +185,7 @@
     <br><br>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Lisensi Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />Kandungan web ini disebarluaskan dengan <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Lisensi Creative Commons Atribusi-NonKomersial 4.0 Internasional</a> (kecuali dinyatakan lain).
 <br>
-Terakhir diupdate: September 2023
+Terakhir diupdate: 2 Oktober 2023
  <br>
  <input type="button" value="Refresh" onClick="document.location.reload(true)">
 </footer>
