--- a/index.html
+++ b/index.html
@@ -14,36 +14,7 @@
     var tahun = tgl.getFullYear();
     tanggallengkap = namahari[hari] + ", " +tanggal + " " + namabulan[bulan] + " " + tahun;
     </script>
-    <div id="fb-root"></div>
-<script>
-        // Fungsi untuk memperbarui waktu
-        function tampilkanWaktu() {
-            var waktuSekarang = new Date();
-            var jam = waktuSekarang.getHours();
-            var menit = waktuSekarang.getMinutes();
-            var detik = waktuSekarang.getSeconds();
-
-            // Format waktu dengan tambahan nol pada angka satu digit
-            if (jam < 10) {
-                jam = "0" + jam;
-            }
-            if (menit < 10) {
-                menit = "0" + menit;
-            }
-            if (detik < 10) {
-                detik = "0" + detik;
-            }
-
-            var waktuString = jam + ":" + menit + ":" + detik;
-            document.getElementById("waktu").innerHTML = waktuString;
-
-            // Perbarui waktu setiap detik
-            setTimeout(tampilkanWaktu, 1000);
-        }
-
-        // Panggil fungsi untuk pertama kali
-        tampilkanWaktu();
-    </script><!-- skrip selesai -->
+<!-- skrip selesai -->
 <!-- header mulai -->
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -86,7 +57,36 @@
             object-fit: cover;
         } 
         #waktu {
-            font-size: 24px;
+            font-size: ;
+        }
+        /* CSS untuk header */
+        header {
+            background-color: #3264a8;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+            
+        }
+
+        /* CSS untuk menu */
+        ul.menu {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        ul.menu li {
+            display: inline;
+            margin-right: 20px;
+        }
+
+        ul.menu li:last-child {
+            margin-right: 0;
+        }
+
+        ul.menu li a {
+            text-decoration: none;
+            color: #fff;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -94,7 +94,38 @@
 <!-- utama -->
 <body>
     <div class="profile">
-        <p>Hari ini <script language='JavaScript'>document.write(tanggallengkap);</script> <div id="waktu"></div></p>
+        <header>
+        <p>Hari ini <script language='JavaScript'>document.write(tanggallengkap);</script><div id="waktu"></div>
+        <script>
+        // Fungsi untuk memperbarui waktu
+        function tampilkanWaktu() {
+            var waktuSekarang = new Date();
+            var jam = waktuSekarang.getHours();
+            var menit = waktuSekarang.getMinutes();
+            var detik = waktuSekarang.getSeconds();
+
+            // Format waktu dengan tambahan nol pada angka satu digit
+            if (jam < 10) {
+                jam = "0" + jam;
+            }
+            if (menit < 10) {
+                menit = "0" + menit;
+            }
+            if (detik < 10) {
+                detik = "0" + detik;
+            }
+
+            var waktuString = jam + ":" + menit + ":" + detik;
+            document.getElementById("waktu").innerHTML = waktuString;
+
+            // Perbarui waktu setiap detik
+            setTimeout(tampilkanWaktu, 1000);
+        }
+
+        // Panggil fungsi untuk pertama kali
+        tampilkanWaktu();
+    </script></p>
+    </header>
         <p>Halo, selamat datang!</p>
         <div class="round-frame">
             <img src="https://raw.githubusercontent.com/Dzaky05/kucinghitam/main/media/FB_IMG_1694165234267.jpg" alt="Foto Profil">
@@ -156,8 +187,8 @@
 <big>•</big> <a href="https://bandori.fandom.com/id">BanG Dream! Wiki versi bahasa Indonesia</a><br>
 <big>•</big>  <a href="https://love-live.fandom.com/id">Love Live! Wiki versi bahasa Indonesia</a>
 <!-- embed spotifi -->
-<h2>Liella! ✨</h2>
-<div style="left: 0; width: 100%; height: 352px; position: relative;"><iframe src="https://open.spotify.com/embed/album/2zzWtgloCBJXKTilI5ioJ1?utm_source=oembed" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture;"></iframe></div>
+<h2>Playlist ✨</h2>
+<div style="left: 0; width: 100%; height: 352px; position: relative;"><iframe src="https://open.spotify.com/embed/playlist/5JgRxVjgDPN3yXFiG5IAcU?utm_source=oembed" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture;"></iframe></div>
 <!-- blog -->
 <h2>Blog</h2>
  <p style="color: gray;">
@@ -180,7 +211,7 @@
 <div class="tenor-gif-embed" data-postid="10660687" data-share-method="host" data-aspect-ratio="1.77778" data-width="100%"><a href="https://tenor.com/view/love-live-sunshine-you-watanabe-gif-10660687">Love Live GIF</a>from <a href="https://tenor.com/search/love-gifs">Love GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 <hr>
 <!-- footer -->    
-<footer></footer>
+<footer>
 <i>aku loplep ♡</i>
     <br><br>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Lisensi Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />Kandungan web ini disebarluaskan dengan <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Lisensi Creative Commons Atribusi-NonKomersial 4.0 Internasional</a> (kecuali dinyatakan lain).
