--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 <!-- skrip selesai -->
 <!-- header mulai -->
 <head>
+ <audio controls autoplay>
+        <source src="https://raw.githubusercontent.com/Dzaky05/kucinghitam/main/media/y2mate.com_-_Our_Town_Our_Life.mp3" type="audio/mpeg">
+        Maaf, peramban Anda tidak mendukung audio.
+    </audio>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Profil</title>
     <style>
