--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
 <!-- skrip selesai -->
 <!-- header mulai -->
 <head>
- <audio controls autoplay>
-        <source src="https://raw.githubusercontent.com/Dzaky05/kucinghitam/main/media/y2mate.com_-_Our_Town_Our_Life" type="audio/mpeg">
-        Maaf, peramban Anda tidak mendukung audio.
-    </audio>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Profil</title>
     <style>
@@ -129,6 +125,10 @@
         // Panggil fungsi untuk pertama kali
         tampilkanWaktu();
     </script></p>
+         <audio controls autoplay>
+        <source src="https://raw.githubusercontent.com/Dzaky05/kucinghitam/main/media/y2mate.com - Our Town Our Life" type="audio/mpeg">
+        Maaf, peramban Anda tidak mendukung audio.
+         </audio>
     </header>
         <p>Halo, selamat datang!</p>
         <div class="round-frame">
