--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <h1>Dzaky Adinata</h1>
         <p>Hanya seorang insan yang memiliki hobi menghabiskan waktunya di internet.</p>
         <p style="color: gray;">
-        <i>"Masa depan bagaikan embusan angin~"</i>
+        <i>"Bukan masalah kamu bisa atau tak bisa, yang terpenting adalah kamu mau atau tidak."</i>
     </p>
     </div>  
 <!-- SNS -->      
@@ -173,7 +173,7 @@
      <ul class="social-media-list">
       <li>
    <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/BanG_Dream%21_lightning_exclamation_mark_symbol.svg" alt="BD Logo">
-            <a>BanG Dream! (UID: 11564446 [GL])<(UID: 131003551 [JP])</a>
+            <a>BanG Dream! (UID: 11564446 [GL])</a>
       </li>
       <li>
    <img src="https://raw.githubusercontent.com/Dzaky05/kucinghitam/main/media/ZM-4dL4R_400x400.jpg" alt="prosek Logo">
