--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
-<link rel="stylesheet" type="text/css" href="/main/main.css">
-<script src="/main/main.js"></script>
+<link rel="stylesheet" type="text/css" href="/main.css">
+<script src="/main.js"></script>
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
   <a class="navbar-brand" href="#">Sidebar Nav</a>
   <button
