--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- ver. 2 -->
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -8,9 +7,9 @@
         <meta name="author" content="" />
         <title>kucinghitam</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="media/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="/styles.css" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     </head>
     <script>
@@ -241,5 +240,5 @@ expand_less
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="/scripts.js"></script>
+        <script src="js/scripts.js"></script>
 </html>
