--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@ expand_more
             <img src="https://raw.githubusercontent.com/Dzaky05/kucinghitam/main/media/FB_IMG_1694165234267.jpg" alt="penggambaran ybs secara rill">
         </div>
         <h2>Dzaky Adinata</h2>
-        <p>yousoro!</p>
+        <!--<p>yousoro!</p>-->
        
-        <p>Halo semuanya! Namaku Dzaky Adinata, seorang pemuda yang hobi menggambar dan menulis, kadang ngoding (<s>ngo...</s>), serta tertarik dengan budaya Jepang (dengan kata lain, <i>otaku</i>).</p>
-        <p>Salam kenal~</p>
+        <p>Hai<!--Halo semuanya! Namaku Dzaky Adinata, seorang pemuda yang hobi menulis, kadang ngoding, serta tertarik dengan budaya Jepang (dengan kata lain, <i>otaku</i>).</p>
+        <p>Salam kenal~--></p>
         <br>
 <a class="social-media-icon facebook" href="https://www.facebook.com/adinata.dzaky.1">
 	<span class="fab fa-facebook"></span></a>
@@ -202,7 +202,7 @@ expand_more
                     <hr class="dotted-hr">  
                     <div class="kotak">
                     <p>A playlist containing my favorite songs, I thought you might also like~</p> 
-        <div style="left: 0; width: 100%; height: 352px; position: relative;"><iframe src="https://open.spotify.com/embed/playlist/5JgRxVjgDPN3yXFiG5IAcU?utm_source=oembed" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture;"></iframe></div></div>
+        <div style="left: 0; width: 100%; height: 352px; position: relative;"><iframe src="https://open.spotify.com/embed/playlist/0IuEqB9g8W3Dvc15ujIw1X?utm_source=oembed" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture;"></iframe></div>
         <br>
         <h1 class="mt-4">Info Mabar</h1>
                     <hr class="dotted-hr">
