--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@ expand_more
                     <div class="kotak">
                     <p>A playlist containing my favorite songs, I thought you might also like~</p> 
         <div style="left: 0; width: 100%; height: 352px; position: relative;"><iframe src="https://open.spotify.com/embed/playlist/0IuEqB9g8W3Dvc15ujIw1X?utm_source=oembed" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture;"></iframe></div>
-        <br>
+		    </div>
+			    <br>
         <h1 class="mt-4">Info Mabar</h1>
                     <hr class="dotted-hr">
                     <div class="kotak">
