--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <span class="material-symbols-outlined" style="font-size: 60px">
 error
 </span>
-<h2>Error :(</h2>
+<h2>Error 404: Not found</h2>
 <p>Maaf ya, halaman yang kamu tuju sepertinya belum/sedang dibuat. Coba datang lagi lain kali :D</p>
 <p><a href="https://dzaky05.github.io/kucinghitam/index.html">Kembali ke Home</a></p>
 <p>Informasi lebih lanjut: bluesonic.wpid@gmail.com</p>
