--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Dzaky Adinata</title>
+	<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/kyynata/kucinghitam/main/favicon.ico">
     <style>
         
         body {
