--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <img src="https://raw.githubusercontent.com/kyynata/kucinghitam/main/media/img_2_1703640314134.jpg" style="width: 15px">	
 </a>
 <br><br>
-<p><a href="https://kyynata.github.io/kucinghitam/gallery.html">Gallery</a> • <a href="https://kyynata.github.io/kucinghitam/project.html">Project</a></p>
+<p><a href="gallery.html">Gallery</a> • <a href="project.html">Project</a></p>
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
 👋
 </button>
