--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <style>
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/kyynata/kucinghitam/main/favicon.ico">
+<title>Gallery</title>
+<style>
         
         body {
             font-family: monospace;
@@ -63,7 +65,7 @@
     </style>
     <body>
 <h2>– Gallery –</h2>
-<h4><a href="https://kyynata.github.io/kucinghitam/index.html">Main</a> • <a href="https://kyynata.github.io/kucinghitam/project.html">Project</a></h4>
+<h4><a href="index.html">Main</a> • <a href="project.html">Project</a></h4>
 <p>– Artwork –</p>
 <img src="https://raw.githubusercontent.com/kyynata/kucinghitam/main/media/10-10-23.png" alt="aijo karen">
 <p>Karen Aijo, 10 October 2023</p>
