--- a/project.html
+++ b/project.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/kyynata/kucinghitam/main/favicon.ico">
+<title>Project</title>
     <style>
         
         body {
@@ -59,7 +61,7 @@
     </style>
     <body>
 <h2>– Project –</h2>
-<h4><a href="https://kyynata.github.io/kucinghitam/index.html">Main</a> • <a href="https://kyynata.github.io/kucinghitam/gallery.html">Gallery</a></h4>
+<h4><a href="index.html">Main</a> • <a href="gallery.html">Gallery</a></h4>
 <br>
      <div class="kotak">
          <b><a href="https://love-live.fandom.com/id">Love Live Wikia (ID)</a></b>
