--- a/404.html
+++ b/404.html
@@ -5,6 +5,10 @@
         }
     </script>
 <style>
+        body {
+            font-family: monospace;
+            text-align: center;            
+        } 
     a:link {
         color: #35A8FF;
         background-color: transparent;
