--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@ error
 </span>
 <h2>Error 404: Not found</h2>
 <p>Maaf ya, halaman yang kamu tuju sepertinya belum/sedang dibuat. Coba datang lagi lain kali :D</p>
-<p><a href="https://dzaky05.github.io/kucinghitam/index.html">Kembali ke Home</a></p>
+<p><a href="index.html">Kembali ke Home</a></p>
 <p>Informasi lebih lanjut: bluesonic.wpid@gmail.com</p>
 <button onclick="refreshPage()"><span class="material-symbols-outlined">
 refresh
