--- a/gallery.html
+++ b/gallery.html
@@ -77,9 +77,15 @@
 <p>Kanon Shibuya, 18 December 2023</p>
 <img src="https://raw.githubusercontent.com/kyynata/kucinghitam/main/media/19-12-23.png" alt="tang keke">
 <p>Keke Tang, 19 December 2023</p>
+	    <img src="https://raw.githubusercontent.com/kyynata/kucinghitam/main/media/20-12-23.png" alt="tomori takamatsu">
+	    <p>Tomori Takamatsu, 20 December 2023</p>
 <img src="https://github.com/kyynata/kucinghitam/blob/main/media/23-12-23.png?raw=true" alt="tsuzuri yugiri">
 <p>Tsuzuri Yugiri, 23 December 2023</p>
-<br>
+	    <img src="https://raw.githubusercontent.com/kyynata/kucinghitam/main/media/31-12-23.png" alt="tomori takamatsu">
+	    <p>Yoshiko Tsushima, 31 December 2023</p>
+	    <img src="https://github.com/kyynata/kucinghitam/blob/main/media/01-01-24.png" alt="tomori takamatsu">
+	    <p>Kanon Shibuya, 01 January2024</p>
+	    <br>
 </body>
     <a href="https://www.pixiv.net/en/users/76135039">Pixiv</a>
     <br>
