--- a/gallery.html
+++ b/gallery.html
@@ -81,9 +81,9 @@
 	    <p>Tomori Takamatsu, 20 December 2023</p>
 <img src="https://github.com/kyynata/kucinghitam/blob/main/media/23-12-23.png?raw=true" alt="tsuzuri yugiri">
 <p>Tsuzuri Yugiri, 23 December 2023</p>
-	    <img src="https://raw.githubusercontent.com/kyynata/kucinghitam/main/media/31-12-23.png" alt="tomori takamatsu">
+	    <img src="https://raw.githubusercontent.com/kyynata/kucinghitam/main/media/31-12-23.png" alt="yoshiko tsushima">
 	    <p>Yoshiko Tsushima, 31 December 2023</p>
-	    <img src="https://github.com/kyynata/kucinghitam/blob/main/media/01-01-24.png" alt="tomori takamatsu">
+	    <img src="https://github.com/kyynata/kucinghitam/blob/main/media/01-01-24.png?raw=true" alt="kanon shibuya">
 	    <p>Kanon Shibuya, 01 January2024</p>
 	    <br>
 </body>
