--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
             <img src="https://raw.githubusercontent.com/Dzaky05/kucinghitam/main/media/FB_IMG_1694165234267.jpg" alt="penggambaran ybs secara rill">
             </div>
             <h3>Dzaky Ali Adinata</h3>
-            <p style="color: grey"><i>Illustrator</i></p>                       
+            <p style="color: grey"><i>
+		    print("hello world")
+	    </i></p>                       
             </div>
             </div>
             <div class="modal-footer">
