--- a/index.html
+++ b/index.html
@@ -187,6 +187,8 @@
             </div>
         </div>
         </div>
+	<br>
+	<div style="left: 0; width: 100%; height: 352px; position: relative;"><iframe src="https://open.spotify.com/embed/playlist/0IuEqB9g8W3Dvc15ujIw1X?utm_source=oembed" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen allow="clipboard-write; encrypted-media; fullscreen; picture-in-picture;"></iframe></div>
 </body>
 <footer>
     <br>
