--- a/mieayam1.html
+++ b/mieayam1.html
@@ -8,7 +8,7 @@
 <!-- header mulai -->
 <head>
             <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Warung mie ayam enak</title>
 	<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/kyynata/kucinghitam/main/favicon.ico">
     <style>
