--- a/mieayam1.html
+++ b/mieayam1.html
@@ -27,4 +27,10 @@
         }
     </style>
 </head>
-<iframe src="https://drive.google.com/file/d/1pBitX2K1mQhmIqnQwuKqiepGvhgVHYje/preview" width="640" height="480"></iframe>
+<body>
+	<h2>BanG Dream! It's MyGO!!!!! Ame ni Soyoide Hare wo Kou</h2>
+	<p>Chapter 1 – Bahasa Indonesia</p>
+<iframe src="https://drive.google.com/file/d/1pBitX2K1mQhmIqnQwuKqiepGvhgVHYje/preview" width="640" height="840"></iframe>
+<p>Diterjemahkan dengan ♡ oleh Mari Tersesat Bersama Maigo</p>
+<p><a href="https://drive.google.com/file/d/1pBitX2K1mQhmIqnQwuKqiepGvhgVHYje/view?usp=drivesdk">[Download]</p>
+</body>
