--- a/mieayam1.html
+++ b/mieayam1.html
@@ -28,9 +28,12 @@
     </style>
 </head>
 <body>
+	<!--
 	<h2>BanG Dream! It's MyGO!!!!! Ame ni Soyoide Hare wo Kou</h2>
 	<p>Chapter 1 – Bahasa Indonesia</p>
-<iframe src="https://drive.google.com/file/d/1pBitX2K1mQhmIqnQwuKqiepGvhgVHYje/preview" width="400" height="750"></iframe>
-<p>Diterjemahkan dengan ♡ oleh Mari Tersesat Bersama Maigo</p>
-<p><a href="https://drive.google.com/file/d/1pBitX2K1mQhmIqnQwuKqiepGvhgVHYje/view?usp=drivesdk">[Download]</p>
+-->
+	<iframe src="https://drive.google.com/file/d/1pBitX2K1mQhmIqnQwuKqiepGvhgVHYje/preview" width="400" height="700"></iframe>
+<!--<p>Diterjemahkan dengan ♡ oleh Mari Tersesat Bersama Maigo</p>
+<p>-->
+	<a href="https://drive.google.com/file/d/1pBitX2K1mQhmIqnQwuKqiepGvhgVHYje/view?usp=drivesdk">[Download]</p>
 </body>
